[package]
name = "blot-cli"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "CLI for the Hack Club Blot"
repository = "https://github.com/polypixeldev/blot-cli"
readme = "README.md"
keywords = ["hackclub", "blot", "cli"]
categories = ["command-line-utilities", "science::robotics"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
cobs2 = "0.1.4"
confy = "0.6.1"
crossterm = "0.28.1"
futures = "0.3.31"
inquire = "0.7.5"
ringbuffer = { version = "0.15.0", features = ["alloc"] }
serde = { version = "1.0.217", features = ["derive"] }
serialport = "4.6.1"
tokio = { version = "1.42.0", features = ["full"] }
tui = "0.19.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[[bin]]
name = "blot"
path = "src/main.rs"
